--- a/Map.html
+++ b/Map.html
@@ -25,7 +25,7 @@
 <body>
     <div id="map"></div>
 
-    <script src="./keys.js"></script>
+    <script src= "https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script>
         let map;
         document.addEventListener("DOMContentLoaded", () => {
@@ -36,14 +36,14 @@
                 console.log("script has loaded");
                 map = new google.maps.Map(document.getElementById("map"), {
                     center: {
-                        lat: 45.3496711,
-                        lng: -75.7569551
+                        lat: 33.7830,
+                        lng: -118.1129
                     },
                     zoom: 16,
                     mapTypeId: google.maps.MapTypeId.ROADMAP
                 });
             });
-            s.src = `https://maps.googleapis.com/maps/api/js?key=${MAPKEY}`;
+            s.src = `https://maps.googleapis.com/maps/api/js?key=AIzaSyD7p_NsbSO7TDme0twe1sCSwlSPRfHpT7E`;
         });
     </script>
 </body>
